--- a/index.html
+++ b/index.html
@@ -187,14 +187,20 @@
       background:var(--panel);
       box-shadow:var(--shadow);
     }
+
+    /* Toolbar */
     .toolbar{
-      display:flex; gap:12px; align-items:center; justify-content:space-between;
+      display:flex;
+      gap:12px;
+      align-items:center;
+      justify-content:space-between;
       padding:12px;
       border-bottom:1px solid var(--border2);
       background:var(--panel2);
     }
     .left{ display:flex; gap:12px; align-items:center; flex-wrap:wrap; }
     .right{ display:flex; gap:10px; align-items:center; }
+
     input[type="search"]{
       width:min(520px, 70vw);
       padding:10px 12px;
@@ -300,18 +306,13 @@
     }
     .boxPad{ padding:14px; }
 
-    /* Left player panel: make content bottom-aligned + bigger name/rating */
     .leftPanel{
       display:flex;
       flex-direction:column;
-      min-height: 410px;
+      min-height: 420px;
     }
-    .leftTop{
-      flex: 1 1 auto;
-    }
-    .leftBottom{
-      margin-top:auto;
-    }
+    .leftTop{ flex: 1 1 auto; }
+    .leftBottom{ margin-top:auto; }
 
     .heroName{
       font-size:38px;
@@ -345,21 +346,32 @@
     .statsGrid{ display:grid; grid-template-columns:1fr 1fr; gap:10px; margin-top:14px; }
     .statsGridRow2{ display:grid; grid-template-columns:1fr 1fr 1fr; gap:10px; margin-top:10px; }
 
+    /* (1) label top, value bottom */
     .stat{
       border:1px solid var(--border2);
       border-radius:14px;
       padding:12px;
       background:var(--panel2);
       min-width:0;
-
-      /* (2) bottom-align content inside each stat */
       display:flex;
       flex-direction:column;
-      justify-content:flex-end;
-      min-height:72px;
+      justify-content:space-between; /* label at top, value at bottom */
+      min-height:78px;
     }
-    .stat b{ display:block; font-size:12px; color:var(--muted); letter-spacing:.06em; text-transform:uppercase; }
-    .stat span{ display:block; margin-top:6px; font-size:18px; font-weight:900; }
+    .stat b{
+      display:block;
+      font-size:12px;
+      color:var(--muted);
+      letter-spacing:.06em;
+      text-transform:uppercase;
+    }
+    .stat span{
+      display:block;
+      margin-top:10px;
+      font-size:18px;
+      font-weight:900;
+      align-self:flex-start;
+    }
 
     .statWin{ background:var(--winBg); border-color:var(--winBd); }
     .statLoss{ background:var(--lossBg); border-color:var(--lossBd); }
@@ -384,7 +396,6 @@
     .chartHead span{ font-size:12px; color:var(--muted); }
     #eloChart{ min-height:260px; color:var(--muted); }
 
-    /* (3) tournament section title bigger + bold */
     .sectionTitle{
       margin:18px 0 10px;
       font-size:16px;
@@ -394,7 +405,13 @@
       opacity:.95;
     }
 
+    /* Tournament table */
+    .tblWrap{
+      overflow-x:auto; /* (5) allow horizontal scroll (always safe) */
+      border-radius:16px;
+    }
     .tbl{
+      min-width:920px; /* ensures scrolling on mobile */
       width:100%;
       border-collapse:separate;
       border-spacing:0;
@@ -448,27 +465,72 @@
     }
 
     @media (max-width: 560px){
-      header{ padding:14px 14px 12px; }
-      header .wrap{ flex-direction:column; gap:12px; }
-      .logo{ width:84px; height:84px; flex-basis:84px; margin-top:0; }
-      h1{ font-size:20px; margin-bottom:2px; }
-      .subtitle{ margin-bottom:6px; }
-      .muted{ font-size:13px; line-height:1.25; }
+      header{ padding:12px 12px 10px; }
+      header .wrap{ flex-direction:column; gap:10px; }
+      .logo{ width:76px; height:76px; flex-basis:76px; margin-top:0; }
+      h1{ font-size:19px; margin-bottom:2px; }
+      .subtitle{ margin-bottom:4px; font-size:11px; }
+      .muted{ font-size:12px; line-height:1.25; }
 
-      .headerRight{ align-items:flex-start; }
-      .headerRightTop{ justify-content:flex-start; width:100%; }
-      .themeRow{ justify-content:flex-start; }
+      /* (3) On mobile: show "načteno" + theme toggle side-by-side and smaller */
+      .headerRight{ align-items:flex-start; width:100%; gap:8px; }
+      .headerRightTop{
+        width:100%;
+        justify-content:flex-start;
+        flex-wrap:nowrap;
+        gap:8px;
+      }
+      .badge{ font-size:11px; padding:6px 8px; }
+      .themeRow{ display:none; } /* hide separate row on mobile */
+      .themeToggle{
+        font-size:11px;
+        padding:6px 8px;
+      }
+      button{ padding:8px 10px; border-radius:12px; font-size:12px; }
+      .btnPrimary{ padding:8px 10px; font-size:12px; }
 
-      .infoBar{ grid-template-columns:1fr; gap:8px; padding:10px; }
-      .infoItem{ padding:12px; min-height:54px; }
+      /* Put request button on next line to reduce clutter */
+      #requestUploadBtn{ width:100%; }
+
+      /* (2) info panels thin like PC */
+      .infoBar{
+        grid-template-columns:1fr;
+        gap:8px;
+        padding:10px;
+      }
+      .infoItem{
+        padding:8px 10px;     /* thinner */
+        min-height:44px;      /* thinner */
+        border-radius:14px;
+      }
       .infoItem b{ font-size:10px; }
-      .infoItem span{ font-size:15px; }
+      .infoItem span{ font-size:14px; }
 
-      .toolbar{ flex-direction:column; align-items:stretch; gap:10px; }
-      .left{ width:100%; }
-      input[type="search"]{ width:100%; }
-      .right{ width:100%; justify-content:flex-end; }
+      /* (4) Toolbar one row */
+      .toolbar{
+        flex-direction:row;
+        align-items:center;
+        gap:10px;
+      }
+      .left{
+        width:100%;
+        flex-wrap:nowrap; /* keep one row */
+        gap:8px;
+      }
+      #status{ flex:0 0 auto; }
+      input[type="search"]{
+        width:100%;
+        padding:9px 10px;
+        border-radius:12px;
+        min-width:0;
+      }
+      .right{
+        flex:0 0 auto;
+        justify-content:flex-end;
+      }
+      #refresh{ padding:9px 10px; border-radius:12px; }
 
+      /* Main table: no horizontal scroll; show only Player+ELO */
       .tableWrap{ overflow-x:hidden; }
       table{ table-layout:fixed; }
       th, td{ padding:10px 10px; }
@@ -476,8 +538,36 @@
       .playerCol{ width:70%; }
       .ratingCol{ width:30%; }
 
-      .metaBoxRow{ grid-template-columns:1fr; }
-      #eloChart{ min-height:240px; }
+      /* (5) Player card mobile */
+      #eloChart{ min-height:190px; } /* shorter chart */
+      .chartBox{ padding:12px; }
+      .metaBoxRow{
+        grid-template-columns:1fr; /* one row per stat */
+        gap:8px;
+      }
+      /* one-line stat: label + value */
+      .metaBoxRow .stat{
+        min-height:44px;
+        flex-direction:row;
+        align-items:center;
+        justify-content:space-between;
+        padding:10px 12px;
+      }
+      .metaBoxRow .stat b{
+        font-size:11px;
+        letter-spacing:.06em;
+        margin:0;
+      }
+      .metaBoxRow .stat span{
+        margin:0;
+        font-size:14px;
+        font-weight:950;
+        text-align:right;
+      }
+
+      /* Tournament tables: ensure horizontal scroll is obvious */
+      .tblWrap{ overflow-x:auto; -webkit-overflow-scrolling:touch; }
+      .tbl{ min-width:920px; }
     }
   </style>
 </head>
@@ -502,15 +592,15 @@
     <div class="headerRight">
       <div class="headerRightTop">
         <div class="badge" id="lastDataBadge">načteno: načítám…</div>
-        <button class="btnPrimary" id="requestUploadBtn" type="button">ZAŽÁDAT O NAHRÁNÍ DAT</button>
-      </div>
-
-      <div class="themeRow">
         <div class="themeToggle" id="themeToggle" title="Přepnout režim">
           <span class="dot"></span>
           <span id="themeLabel">☀️ Světlý</span>
         </div>
+        <button class="btnPrimary" id="requestUploadBtn" type="button">ZAŽÁDAT O NAHRÁNÍ DAT</button>
       </div>
+
+      <!-- Desktop-only row (hidden on mobile) -->
+      <div class="themeRow" aria-hidden="true"></div>
     </div>
   </div>
 </header>
@@ -623,7 +713,6 @@
     const theme = htmlEl.getAttribute("data-theme") || "dark";
     logoImg.src = (theme === "light") ? "logo2.png" : "logo.png";
   }
-
   function setTheme(theme){
     htmlEl.setAttribute("data-theme", theme);
     themeLabel.textContent = (theme === "dark") ? "☀️ Světlý" : "Tmavý 🌙";
@@ -814,7 +903,6 @@
 
       const rows = parseCSV(text);
 
-      // fixed cols for Elo standings (A..G), Peak in H => index 7
       const iPlayer = 0, iRating = 1, iGames=2, iWin=3, iLoss=4, iDraw=5, iWinrate=6, iPeak=7;
 
       const loaded = rows.slice(1).map(r => ({
@@ -852,15 +940,15 @@
     if (rows.length < 2) throw new Error("Player cards (CSV): prázdné CSV");
 
     const items = rows.slice(1).map(r => ({
-      player: (r[0] ?? "").toString().trim(),              // A
-      matchId: toNumber((r[1] ?? "").toString().trim()),   // B
-      tournament: (r[2] ?? "").toString().trim(),          // C
-      tournamentDetail: (r[3] ?? "").toString().trim(),    // D
-      date: (r[4] ?? "").toString().trim(),                // E
-      opponent: (r[5] ?? "").toString().trim(),            // F
-      result: (r[6] ?? "").toString().trim(),              // G
-      delta: (r[7] ?? "").toString().trim(),               // H
-      elo: toNumber((r[8] ?? "").toString().trim())        // I
+      player: (r[0] ?? "").toString().trim(),
+      matchId: toNumber((r[1] ?? "").toString().trim()),
+      tournament: (r[2] ?? "").toString().trim(),
+      tournamentDetail: (r[3] ?? "").toString().trim(),
+      date: (r[4] ?? "").toString().trim(),
+      opponent: (r[5] ?? "").toString().trim(),
+      result: (r[6] ?? "").toString().trim(),
+      delta: (r[7] ?? "").toString().trim(),
+      elo: toNumber((r[8] ?? "").toString().trim())
     })).filter(x => x.player);
 
     playerCardsCache = items;
@@ -879,7 +967,6 @@
     const rows = parseCSV(text);
     if (rows.length < 2) return [];
 
-    // A=0, M=12, N=13, O=14
     const items = rows.slice(1).map(r => ({
       player: (r[0] ?? "").toString().trim(),
       avgOpp: toNumber((r[12] ?? "").toString().trim()),
@@ -897,16 +984,11 @@
     return list.find(x => x.player.trim() === wanted) || null;
   }
 
-  /* CHART: equally spaced X (index), labels are Match ID */
   function buildSvgLineChartEqualX(points){
-    const clean = points
-      .filter(p => Number.isFinite(p.matchId) && Number.isFinite(p.elo))
-      .slice();
-
+    const clean = points.filter(p => Number.isFinite(p.matchId) && Number.isFinite(p.elo)).slice();
     if (clean.length < 2) return `<div class="muted">Graf nelze vykreslit (málo dat).</div>`;
 
     const w=980, h=280, padL=44, padR=18, padT=18, padB=42;
-
     const ys = clean.map(p=>p.elo);
     const minY = Math.min(...ys), maxY = Math.max(...ys);
     const spanY = Math.max(1, maxY - minY);
@@ -946,10 +1028,7 @@
       `;
     }
 
-    const dots = clean.map((p,i) => {
-      const cx = X(i), cy = Y(p.elo);
-      return `<circle cx="${cx}" cy="${cy}" r="3.2" fill="var(--chartDot)" />`;
-    }).join("");
+    const dots = clean.map((p,i) => `<circle cx="${X(i)}" cy="${Y(p.elo)}" r="3.2" fill="var(--chartDot)" />`).join("");
 
     return `
       <svg viewBox="0 0 ${w} ${h}" width="100%" height="280" role="img" aria-label="ELO chart">
@@ -1077,7 +1156,7 @@
       </tr>
     `;
 
-    return `<table class="tbl">${head}<tbody>${body}${summaryRow}</tbody></table>`;
+    return `<div class="tblWrap"><table class="tbl">${head}<tbody>${body}${summaryRow}</tbody></table></div>`;
   }
 
   async function loadPlayerDetail(playerObj){
